--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.font-oswald {
+  font-family: 'oswald', sans-serif;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.font-roboto {
+  font-family: 'roboto', sans-serif;
+}
+
+.my-pokemon-list-img {
+  width: 50px;
+  height: auto;
 }
