--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,22 @@ body {
   width: 50px;
   height: auto;
 }
+
+.title-size-1 {
+  font-size: 60px;
+}
+
+.poke-img-title {
+  width: 30px;
+  height: auto;  
+}
+
+.p-list {
+  font-size: 20px;
+}
+
+.app-welcoming-box {
+  background-color: #212529;
+  min-height: 150px;
+  padding: 20px;
+}
