--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,15 @@ body {
   min-height: 150px;
   padding: 20px;
 }
+
+.selected-poke-img {
+  width: 150px;
+  height: auto;
+}
+
+.poke-name {
+  font-weight: bold;
+  font-size: 25px;
+  text-transform: uppercase;
+  text-align: center;
+}
