--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,9 @@ body {
   text-transform: uppercase;
   text-align: center;
 }
+
+.profile-pic {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
